Only use iOS fix on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -14,14 +14,7 @@ body {
   text-align: left;
 }
 
-.map-background:after {
-  content:"";
-  position:fixed; /* stretch a fixed position to the whole screen */
-  top:0;
-  height:100vh; /* fix for mobile browser address bar appearing disappearing */
-  left:0;
-  right:0;
-  z-index:0; /* needed to keep in the background */
+.map-background {
   background: url(../img/uk-map.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -33,7 +26,6 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(36, 42, 58, 0.71);
-  z-index:1;
 }
 
 #map {
@@ -43,14 +35,12 @@ body {
   position: sticky;
   position: -webkit-sticky;
   top: 0;
-  z-index: 2;
 }
 
 #end-map {
   width: 100%;
   height: 1000px;
   margin: 0;
-  z-index: 3;
 }
 
 .central {
